fixed footer spacing.

--- a/frontend/src/components/common_components/Footer.css
+++ b/frontend/src/components/common_components/Footer.css
@@ -31,7 +31,7 @@
 }
 
 .footer-item {
-  margin-bottom: 0.5rem;
+  margin-bottom: 1.5rem;
 }
 
 .footer-item a {
